syntax = "proto3";

option java_package = "me.hoffmann.bank.proto.account";
package account;

message Deposit {
    int32 amount = 1;
    string replyTo = 2;
}

message Deposited {
    int32 amount = 1;
}

message Withdraw {
    int32 amount = 1;
    string replyTo = 2;
}

message InsufficientBalance {
    int32 amount = 1;
    int64 balance = 2;
}

message Withdrawn {
    int32 amount = 1;
}

message InvalidAmount {
    int32 amount = 1;
}
